--- a/Go语法复习/程序结构.md
+++ b/Go语法复习/程序结构.md
@@ -1,10 +1,6 @@
-# Go语法快速复习
+# 程序结构
 
-本章内容主要是来自于本人实践以及部分书籍（见文末），适合有 C/C++、Java、Go或其他语言基础的读者复习Go的语法。
-
-## 程序结构
-
-### Hello World
+## Hello World
 
 Go语言的基础组成有6个部分：包声明、 引入包、函数、变量、语句&表达式和注释等
 
@@ -33,7 +29,7 @@ $ ./main
 $ go run main.go
 ```
 
-### 包和gomod
+## 包和gomod
 
 包的常见注意事项如下：
 - Go中的包可以理解为 C++中的namespace，Java中的package
@@ -50,7 +46,7 @@ $ go mod init github.com/xmcy0011/my-kratos
 
 更多关于 gomod的信息请参考：[Go Modules Reference](https://go.dev/ref/mod#introduction)
 
-### 变量
+## 变量
 
 go是强类型语言，使用 var 声明变量并自动初始，省略类型时自动推导。在函数内的局部变量，推荐使用短变量声明操作符 `:=` 来声明和初始化。
 
@@ -72,7 +68,7 @@ func Add(a, b int, c float32) int {}  // 方式七：函数参数类型相同时
 
 注意Go中未使用的局部变量会导致编译错误，实际工作中各种IDE格式化时会自动清理，较小概率出现在笔试题中。
 
-### 全局变量
+## 全局变量
 
 注意Go是同时支持面向过程和面向对象编程的，go的全局变量直接放在文件中。和java语言相比，不需要放在Class内。和C++相比，不需要引入额外的关键词比如 `const static` 等。
 
@@ -86,7 +82,7 @@ func NewUser() *User{
 }
 ```
 
-### 变量逃逸
+## 变量逃逸
 
 `闭包` 会造成变量逃逸，即变量的分配由栈变成了堆，这也就是所谓的逃逸分析（escape analysis）。
 ```go
@@ -119,7 +115,7 @@ func test() *int {
 
 更多关于逃逸分析的内容，请参考 《Go语言学习笔记第四章》或这篇文章：https://appliedgo.com/blog/how-to-do-escape-analysis
 
-### 常量
+## 常量
 
 常量使用 `const` 声明，语法和 var 变量声明类似，不过要注意的是常量声明时可省略值和类型：
 
@@ -142,7 +138,7 @@ func main() {
 1 abc abc
 ```
 
-### 枚举iota
+## 枚举iota
 
 Go没有 `enum` 关键字，而是通过 `const` 和 `iota` 自增标志符实现枚举，不过由于 `iota` 的自增规则会让初学者很容易迷糊，一旦出现在笔试题中，大概率会答错。我们只要记住，iota每次出现都会自增一次即可分辨。
 
@@ -206,7 +202,7 @@ main.Animal: 0 - main.Animal: 1
 main.MsgType: txt - main.MsgType: video - string: img 
 ```
 
-### 指针
+## 指针
 
 指针使用 `*T` 方式声明，它的值是一个变量的内存地址（常量在编译阶段展开，故无法获取地址），使用 `& 取地址操作符` 获取变量的内存地址，使用 `* 解引用操作符` 获取或更改变量的值。
 
@@ -310,85 +306,3 @@ fmt.Printf("%v %v\n", pt1 == pt2, pt1 == pt3) // true false
 PS：unsafe.Pointer转化指针后可进行加减操作，但是可能会造成非法访问。
 
 Go的指针设计，再配合垃圾回收、逃逸分析和自动初始化零值等机制，在 C/C++ 编程中各种 野指针、指针悬空和访问已释放的对象等问题都不复存在，大幅度提升了程序开发体验。
-
-## 表达式
-
-### 保留字
-
-```txt
-break default func interface select
-case  defer go map struct
-chan  else goto package switch
-const fallthrough if range type
-continue for import return var
-```
-
-### 运算符
-
-```txt
-+ & += &= && == != ( )
-- | -= |= || < <= [ ]
-* ^ *= ^= <- > >= { }
-/ << /= <<= ++ = := , ;
-% >> %= >>= -- ! ... . :
-&^ &^=
-```
-
-和其他语言的差异：
-- `bit clear` 位运算符(AND NOT)是Go特有的，其形式为 `a &^ b`  
-- Go中自增和自减不再是运算符，只能作为独立语句，独占一行，相比C/C++也不支持运算符重载
-- Go没有 "~"，取反运算使用 "^"
-- 支持 `字面量` 初始化
-
-### 控制流程
-
-#### if
-
-```go
-x := 0  
-if x > 0 {  
-   // ...  
-} else if x < 0 {  
-   // ...  
-} else {  
-   // ...  
-}
-
-// 支持初始化语句
-if _, err := strconv.Atoi("sd"); err != nil {  
-}
-```
-
-#### for
-
-Go中没有while循环，do while循环等，统一使用 for 实现。
-
-```go
-// 最常见的循环
-for i := 0; i < 3; i++ {
-}
-
-// 类似 while x < 10 或 for ; x < 10; x++ {}
-for x < 10 {
-	x++
-}
-
-// 相当于 while true
-for {
-	if x > 10 {
-		break
-	}
-}
-```
-
-#### for range
-
-Go提供了 `for range` 表达式支持，可以方便的遍历切片、channel、map等
-
-## 类型
-
-## 鸣谢
-
-- [《The Go Programming Language》](https://book.douban.com/subject/26337545/)
-- [《Go语言学习笔记》](https://book.douban.com/subject/26832468/)
-- [《Go语言设计与实现》](https://book.douban.com/subject/35635836/)
